# fylge

./: .gitignore  Cargo.toml  README.md
crates/fylge-core/: Cargo.toml
crates/fylge-core/src/: entity.rs  error.rs  event.rs  hlc.rs  icon.rs  lib.rs  node.rs  storage.rs  validation.rs
crates/fylge-db/: Cargo.toml
crates/fylge-db/src/: checkpoint_store.rs  entity_store.rs  event_store.rs  lib.rs  tables.rs
crates/fylge-replication/: Cargo.toml
crates/fylge-replication/src/: checkpoint.rs  lib.rs  materializer.rs  protocol.rs  pull.rs
crates/fylge-server/: Cargo.toml
crates/fylge-server/src/: config.rs  lib.rs  main.rs  state.rs
crates/fylge-server/src/middleware/: mod.rs  rate_limit.rs
crates/fylge-server/src/routes/: api.rs  health.rs  markers.rs  mod.rs  pages.rs  replication.rs
crates/fylge-server/static/: app.js  style.css
crates/fylge-server/static/icons/: icons.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  globe.gl.d.ts  main.ts  state.ts  types.ts
migrations/: 001_create_marker_log.sql
src/: config.rs  db.rs  lib.rs  main.rs  models.rs  state.rs
src/routes/: api.rs  markers.rs  mod.rs
static/: app.js  index.html  style.css
static/icons/: icons.json
tests/: api_tests.rs
