[package]
name = "fylge-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fylge-core = { path = "../fylge-core" }
fylge-db = { path = "../fylge-db" }
fylge-replication = { path = "../fylge-replication" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
